# forgeapi

./: .env  License  README.md  pyproject.toml
docs/: CHANGELOG.md  Wiki.md  examples.md
src/: __init__.py
src/api/: __init__.py  api.py  forge.py
src/game/: __init__.py  achievement.py  display.py  item.py  player.py
src/permissions/: __init__.py  permissionmanager.py  role.py
src/user/: user.py
tests/: api_tests.py  user_tests.py
